--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.server.js"
   },
-  "author": "prashant",
+  "author": "Prashant Sachan",
   "license": "ISC",
   "description": "",
   "dependencies": {
