--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "slugify": "^1.6.6"
   }
 }
